--- a/src/styles/perfil.css
+++ b/src/styles/perfil.css
@@ -43,7 +43,21 @@
     cursor: pointer;
     transition: background-color 0.3s;
   }
+
+  .btnEditar {
+    padding: 10px 20px;
+    background-color: coral;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
   
   .btnCerrarSesion:hover {
     background-color: #ff1a1a;
+  }
+
+  .btnEditar:hover{
+    background-color: rgb(122, 40, 9);
   }
