--- a/src/styles/register.css
+++ b/src/styles/register.css
@@ -1,77 +1,85 @@
+/* Estilo del contenedor de registro */
 .register-container {
-    width: 100%;
-    max-width: 400px;
+    width: 600px;
+    height: 600px;
     margin: 50px auto;
-    padding: 20px;
-    background-color: #f7f7f7;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    background-color: rgb(251, 232, 242); 
+    border-radius: 15px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    margin-top: 200px;
 }
 
-form {
+/* Estilo del formulario dentro del registro */
+.register-container form {
     display: flex;
     flex-direction: column;
+    margin-top: 40px;
 }
 
-h3 {
-    text-align: center;
-    margin-bottom: 20px;
+/* Estilo del título del formulario */
+.register-container h3 {
+    font-size: 36px;
+    margin-bottom: 30px;
     color: #333;
+    text-align: center;
 }
 
-.input-container {
-    margin-bottom: 15px;
+/* Estilo de los campos de entrada */
+.register-container .input-container {
+    margin-bottom: 30px;
 }
 
-.label {
+.register-container .label {
     display: block;
-    margin-bottom: 5px;
-    color: #666;
+    margin-bottom: 10px;
+    color: #d36c6c; 
+    font-size: 18px;
 }
 
-input {
+.register-container input {
     width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    padding: 20px;
+    border: 1px solid #d3aeba; 
+    border-radius: 6px;
     box-sizing: border-box;
+    font-size: 18px;
 }
 
-input:focus {
-    border-color: #007bff;
+.register-container input:focus {
+    border-color: #f06292; 
     outline: none;
 }
 
-.d-grid {
-    display: grid;
-}
-
-button {
+/* Estilo del botón */
+.register-container button {
     width: 100%;
-    padding: 10px;
-    background-color: #007bff;
+    padding: 15px;
+    background-color: #fbc4d9; 
     border: none;
     border-radius: 4px;
     color: white;
-    font-size: 16px;
+    font-size: 30px;
     cursor: pointer;
     margin-top: 10px;
 }
 
-button:hover {
-    background-color: #0056b3;
+.register-container button:hover {
+    background-color: #f8b3b3; 
 }
 
-.forgot-password {
+/* Estilo del enlace de contraseña olvidada */
+.register-container .forgot-password {
     text-align: right;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
-.forgot-password a {
-    color: #007bff;
+.register-container .forgot-password a {
+    color: #f48fb1; 
     text-decoration: none;
+    font-size: 18px;
 }
 
-.forgot-password a:hover {
+.register-container .forgot-password a:hover {
     text-decoration: underline;
 }
