--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -9,12 +9,12 @@
     font-family: "Montserrat", sans-serif;
 }
 
-/*body {
-    background: url('../images/DEGRADE2.jpg') no-repeat center center fixed;
+body {
     background-size: cover;
     margin: 0;
     padding: 0;
-}*/
+    overflow: hidden;
+}
 
 .container-form h1 {
     font-size: 36px;
